# sfml-widgets

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt  lint.sh  main.cpp  sfml-widgets.cbp
.github/workflows/: ci.yml
apple_cmake/: MacBundle.cmake  README.md
demo/: ResourcePath.cpp  ResourcePath.hpp  ResourcePath.mm  demo.cpp
demo/resources/: SfmlWidgets.icns  win-icon.rc
src/: demo.cpp
src/Gui/: Button.cpp  Button.hpp  CheckBox.cpp  CheckBox.hpp  ComboBox.hpp  ComboBox.inl  Gui.hpp  Image.cpp  Image.hpp  Label.cpp  Label.hpp  Menu.cpp  Menu.hpp  OptionsBox.hpp  OptionsBox.inl  ProgressBar.cpp  ProgressBar.hpp  Slider.cpp  Slider.hpp  SpriteButton.cpp  SpriteButton.hpp  TextBox.cpp  TextBox.hpp  Theme.cpp  Theme.hpp  Widget.cpp  Widget.hpp
src/Gui/Enums/: Enums.hpp
src/Gui/Layouts/: FormLayout.cpp  FormLayout.hpp  HBoxLayout.cpp  HBoxLayout.hpp  Layout.cpp  Layout.hpp  VBoxLayout.cpp  VBoxLayout.hpp
src/Gui/Utils/: Arrow.cpp  Arrow.hpp  Box.cpp  Box.hpp  Cross.cpp  Cross.hpp  ItemBox.hpp  ItemBox.inl
